# Gactorio

./: .gitignore  CMakeLists.txt  README.md  README_SUBMISSION_REVISED.md  architecture.md  build_web.ps1  build_web.sh  factory_progress_report_JP.docx
BE/: CarbonationFactory.hpp  Factory.hpp  Ingredient.hpp  Inventory.hpp  Machine.hpp  Order.hpp  PackagingFactory.hpp  Product.hpp  ProductionLine.hpp  README.md  Recipe.hpp  main.cpp
UML/: UML_Info_BE_kor.md
UML_raw/: .$BE_Overall_Class_Diagram.drawio.bkp  .$Machine_State_Diagram.drawio.bkp  .$Observer_Event_Pattern_Diagram.drawio.bkp  .$Product_Domain_Class_Diagram.drawio.bkp  .$Tick_Update_Sequence_Diagram.drawio.bkp  Core_Simulation_Class_Diagram.drawio  Memento_Pattern_Diagram.drawio  Observer_Event_Pattern_Diagram.drawio
data/: factory_config.custom_runtime.json  factory_config.json  factory_config.runtime.json
docs/: app.js  backend_summary.md  gactorio.js  gactorio.wasm  index.html  style.css
docs/config/: factory_config.custom_runtime.json  factory_config.runtime.json
docs/js/: AppUI.js  Application.js  UIComponent.js  main.js  util.js
docs/js/panels/: EventLogPanel.js  FactoryPanel.js  InspectorPanel.js  InventoryPanel.js  ProductsPanel.js  RuntimeConfigPanel.js  SimControlPanel.js
include/common/: Config.h  ScenarioType.hpp  SimClock.hpp  Types.hpp
include/controller/: Controller.h  ControllerConfigIdAdapters.hpp  FactoryCommand.hpp  FactoryController.hpp  SimulationHistory.hpp
include/dto/: EventSnapshot.hpp  FactorySnapshot.hpp  InventorySnapshot.hpp  MachineSnapshot.hpp  ProductionLineSnapshot.hpp  StatisticsSnapshot.hpp
include/model/: CarbonationFactory.hpp  ConfigurableFactory.hpp  ConfiguredStation.hpp  DefaultProducts.hpp  Factory.hpp  FactoryBuilder.hpp  Ingredient.hpp  Inventory.hpp  Item.hpp  Machine.hpp  MachineState.hpp  MachineStates.hpp  MixingFactory.hpp  Product.hpp  ProductCatalog.hpp  ProductDefinition.hpp  ProductionLine.hpp  ProductionTask.hpp  Recipe.hpp  StationFactory.hpp
include/model/config/: ConfigIdAdapters.hpp  DefinitionRegistry.hpp  FactoryConfig.hpp  FactoryConfigLoader.hpp  FactoryRuntimeContext.hpp
include/model/events/: Event.hpp  EventBus.hpp  EventLogObserver.hpp  Observer.hpp  StatisticsObserver.hpp
include/model/memento/: FactoryMemento.hpp
presentation/: PROJECT_STRUCTURE_REVIEW_20260613.md
presentation/Script/: OOPS_Scripts_BE_Shorts_KR.md  OOPS_Scripts_DemoFlow_KR.md  OOPS_Scripts_EN.md  OOPS_Scripts_FE_JS_MVC_Addendum_KR.md  OOPS_Scripts_KR.md  OOPS_Scripts_Shorts_EN.md  OOPS_Scripts_Shorts_KR.md
presentation/UML/: FE_JS_View_Layout_Update_KR.md  FE_JS_View_UML_Info_KR.md  UML_Code_Consistency_Analysis_KR.md  UML_Info_BE_KO.md  UML_Info_BE_kor.md
presentation/UML_raw/: .$Core_Simulation_Class_Diagram.drawio.bkp  .$FE_JS_View_Class_Diagram.drawio.bkp  .$Memento_Pattern_Diagram.drawio.bkp  .$Memento_Pattern_Diagram_REVISED.drawio.bkp  BE_Overall_Class_Diagram.drawio  BE_Overall_Class_Diagram_REVISED.drawio  FE_JS_View_Class_Diagram.drawio  Machine_State_Diagram.drawio  Observer_Event_Pattern_Diagram.drawio  Product_Domain_Class_Diagram.drawio  Tick_Update_Sequence_Diagram.drawio
src/: backend_example.cpp  main.cpp
src/common/: ScenarioType.cpp  SimClock.cpp  Types.cpp
src/controller/: Controller.cpp  ControllerConfigIdAdapters.cpp  FactoryController.cpp  SimulationHistory.cpp
src/controllers/: FactoryController.h
src/dto/: EventSnapshot.cpp  FactorySnapshot.cpp  InventorySnapshot.cpp  MachineSnapshot.cpp  ProductionLineSnapshot.cpp  StatisticsSnapshot.cpp
src/model/: CarbonationFactory.cpp  ConfigurableFactory.cpp  ConfiguredStation.cpp  DefaultProducts.cpp  Factory.cpp  FactoryBuilder.cpp  Ingredient.cpp  Inventory,cpp  Inventory.cpp  Item.cpp  Machine.cpp  MachineState.cpp  MachineStates.cpp  Product.cpp  ProductCatalog.cpp  ProductionLine.cpp  ProductionTask.cpp  Recipe.cpp  StationFactory.cpp
src/model/config/: ConfigIdAdapters.cpp  DefinitionRegistry.cpp  FactoryConfigLoader.cpp  FactoryRuntimeContext.cpp
src/model/events/: EventBus.cpp  EventLogObserver.cpp  StatisticsObserver.cpp
src/models/: Factory.cpp  Factory.h  Machine.cpp  Machine.h  Stations.h
src/views/: AppUI.cpp  AppUI.h  Application.cpp  Application.h  FactoryPanel.cpp  FactoryPanel.h  UIComponent.h
src/web/: bindings.cpp
tests/: CMakeLists.txt
tests/controller/: ControllerStringIdSmokeTest.cpp  FactoryControllerConfigSmokeTest.cpp  FactoryControllerSmokeTest.cpp  JsonOnlyExtensionSmokeTest.cpp  MementoIntegrationSmokeTest.cpp  MementoSmokeTest.cpp  SimulationHistorySmokeTest.cpp
tests/model/: ConcreteMachineSmokeTest.cpp  ConfigIdAdaptersSmokeTest.cpp  ConfigTopologyMementoSmokeTest.cpp  ConfiguredStationSmokeTest.cpp  DefinitionRegistrySmokeTest.cpp  FactoryBuilderSmokeTest.cpp  FactoryConfigLoaderSmokeTest.cpp  FactoryFlowSmokeTest.cpp  FactoryInventoryEnqueueSmokeTest.cpp  FactoryRuntimeContextSmokeTest.cpp  InventorySmokeTest.cpp  InventoryStringIdSmokeTest.cpp  MachineSmokeTest.cpp  MachineStateSmokeTest.cpp  MachineStringKindSmokeTest.cpp  ObserverSmokeTest.cpp  ProcessStepMetadataSmokeTest.cpp  ProcessStepStringKindSmokeTest.cpp  ProductCatalogIntegrationSmokeTest.cpp  ProductCatalogRegistryAdapterSmokeTest.cpp  ProductSmokeTest.cpp  ProductStringIdSmokeTest.cpp  ProductionLineSmokeTest.cpp  ProductionLineStringMatchingSmokeTest.cpp  ProductionTaskSmokeTest.cpp  RecipeStringItemIdSmokeTest.cpp  ScenarioTypeSmokeTest.cpp  SimClockSmokeTest.cpp  StepLevelIOMementoSmokeTest.cpp  StepLevelIOSmokeTest.cpp
tools/: drawio_summarize.py  gen_config.py
web/: gactorio.js  index.html  style.css
